# hue_labz

./: .gitignore  README.md  color-extractor.js  package-lock.json  package.json  pyproject.toml  train_run.py
dataset/: color_palette_dataset.json  extracted_css_vars.json  tailwind-colors-python-format.json  tailwind-colors.css  tailwind-colors.json
model/: hybrid.py  primal.py  trainer.py  transformer.py  utils.py
src/: base_generator.py  color_compute.py  data_generator.py  dependencies.py  generative.py  pre_process.py
