[project]
name = "hue-labz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
